# worm-hole

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitleaks.toml  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestPresets.json  LICENSE  README.md  README.zh-CN.md  SECURITY.md  build.sh
benchmark/: CMakeLists.txt  compose_real_graph_bench.cpp  mpmc_queue_benchmark.cpp  sender_notify_benchmark.cpp  small_vector_vs_std_vector_benchmark.cpp
tests/: CMakeLists.txt  test_profiles.cmake
tests/FT/: CMakeLists.txt  README.md
tests/FT/wh/adk/: event_stream_contracts_test.cpp  instruction_and_call_options_contracts_test.cpp  interrupt_contracts_test.cpp  protocol_contracts_test.cpp  runner_contracts_test.cpp  types_and_context_contracts_test.cpp
tests/FT/wh/agent/: chat_and_react_shells_contracts_test.cpp  composition_contracts_test.cpp  host_graph_contracts_test.cpp  host_shells_contracts_test.cpp  iterative_shells_contracts_test.cpp  tool_bridge_contracts_test.cpp  transfer_contracts_test.cpp
tests/FT/wh/agent/middlewares/: middlewares_contracts_test.cpp
tests/FT/wh/compose/authored/: branch_contracts_test.cpp  chain_contracts_test.cpp  workflow_contracts_test.cpp
tests/FT/wh/compose/callback/: adapter_contracts_test.cpp
tests/FT/wh/compose/graph/: async_contracts_test.cpp  call_options_contracts_test.cpp  checkpoint_contracts_test.cpp  compile_contracts_test.cpp  diff_restore_contracts_test.cpp  interrupt_contracts_test.cpp  introspect_contracts_test.cpp  (+8 more)
tests/FT/wh/core/: bounded_queue_contracts_test.cpp  cursor_reader_contracts_test.cpp
tests/FT/wh/document/: component_document_contracts_test.cpp
tests/FT/wh/embedding/: component_embedding_contracts_test.cpp
tests/FT/wh/flow/: flow_contracts_test.cpp
tests/FT/wh/indexer/: component_indexer_contracts_test.cpp
tests/FT/wh/model/: component_model_contracts_test.cpp  retry_contracts_test.cpp
tests/FT/wh/output/: output_parser_contracts_test.cpp
tests/FT/wh/prompt/: component_prompt_contracts_test.cpp
tests/FT/wh/retriever/: component_retriever_contracts_test.cpp
tests/FT/wh/schema/: stream_contracts_test.cpp
tests/FT/wh/sync/: async_mutex_contracts_test.cpp
tests/FT/wh/tool/: component_tool_contracts_test.cpp
tests/FT/wh/workflow/: workflow_contracts_test.cpp
tests/UT/: CMakeLists.txt  README.md
tests/UT/wh/: flow_ut.cpp
tests/UT/wh/adk/: agent_tool_ut.cpp  bind_ut.cpp  call_options_ut.cpp  deterministic_transfer_ut.cpp  event_stream_ut.cpp  interrupt_ut.cpp  runner_ut.cpp  types_ut.cpp
tests/UT/wh/agent/: agent_ut.cpp  bind_ut.cpp  chat_ut.cpp  instruction_ut.cpp  options_ut.cpp  plan_execute_ut.cpp  react_ut.cpp  reflexion_ut.cpp  research_ut.cpp  reviewer_executor_ut.cpp  revision_ut.cpp  self_refine_ut.cpp  supervisor_ut.cpp  swarm_ut.cpp  toolset_ut.cpp
tests/UT/wh/callbacks/: aspect_inject_ut.cpp  callback_builder_ut.cpp  callbacks_ut.cpp  interface_ut.cpp  manager_ut.cpp  template_helper_ut.cpp
tests/UT/wh/compose/: authored_ut.cpp  callback_ut.cpp  field_ut.cpp  graph_ut.cpp  node_ut.cpp  payload_ut.cpp  reduce_ut.cpp  runtime_ut.cpp  types_ut.cpp
tests/UT/wh/core/: address_ut.cpp  any_ut.cpp  bounded_queue_ut.cpp  callback_ut.cpp  compiler_ut.cpp  component_ut.cpp  cursor_reader_ut.cpp  error_domain_ut.cpp  error_ut.cpp  function_ut.cpp  intrusive_ptr_ut.cpp  json_ut.cpp  reflect_ut.cpp  result_ut.cpp  resume_state_ut.cpp  run_context_ut.cpp  small_vector_ut.cpp  stdexec_ut.cpp  type_traits_ut.cpp  type_utils_ut.cpp
tests/UT/wh/document/: callback_event_loader_ut.cpp  callback_event_parser_ut.cpp  callback_event_transformer_ut.cpp  document_ut.cpp  keys_ut.cpp  options_ut.cpp  processor_ut.cpp
tests/UT/wh/embedding/: callback_event_ut.cpp  embedding_ut.cpp  options_ut.cpp
tests/UT/wh/flow/: indexing_ut.cpp  retrieval_ut.cpp
tests/UT/wh/indexer/: callback_event_ut.cpp  indexer_ut.cpp  options_ut.cpp
tests/UT/wh/internal/: callbacks_ut.cpp  concat_ut.cpp  merge_ut.cpp  reduce_registry_ut.cpp  safe_ut.cpp  serialization_ut.cpp  stacktrace_ut.cpp  type_name_ut.cpp  windows_macro_hygiene_ut.cpp
tests/UT/wh/model/: callback_event_ut.cpp  chat_model_ut.cpp  echo_chat_model_ut.cpp  fallback_chat_model_ut.cpp  options_ut.cpp  retry_ut.cpp
tests/UT/wh/net/: concepts_ut.cpp  http_client_interface_ut.cpp  types_ut.cpp
tests/UT/wh/output/: output_parser_ut.cpp
tests/UT/wh/prompt/: callback_event_ut.cpp  chat_template_ut.cpp  options_ut.cpp  simple_chat_template_ut.cpp  template_ut.cpp
tests/UT/wh/retriever/: callback_event_ut.cpp  options_ut.cpp  retriever_ut.cpp
tests/UT/wh/scheduler/: timer_helper_ut.cpp
tests/UT/wh/schema/: document_ut.cpp  message_ut.cpp  serialization_ut.cpp  stream_ut.cpp  tool_ut.cpp
tests/UT/wh/sync/: async_mutex_ut.cpp
tests/UT/wh/tool/: call_scope_ut.cpp  callback_event_ut.cpp  catalog_ut.cpp  interrupt_ut.cpp  options_ut.cpp  tool_ut.cpp
tests/UT/wh/workflow/: workflow_ut.cpp
tests/core/: channel_contracts_test.cpp  compiler_contracts_test.cpp  container_queue_primitives_test.cpp  error_contracts_test.cpp  json_serialization_error_domain_contracts_test.cpp  l2_parser_stream_output_contracts_test.cpp  l2_schema_contracts_test.cpp  merge_concat_registry_contracts_test.cpp  queue_completion_token_contracts_test.cpp  reflect_field_access_test.cpp  result_contracts_test.cpp  runtime_context_interrupt_mock_contracts_test.cpp  type_name_registry_contracts_test.cpp  type_utils_default_instance_test.cpp  type_utils_metaprogramming_contracts_test.cpp
tests/helper/: agent_authoring_support.hpp  async_coordination.hpp  callback_sequence_assert.hpp  component_contract_support.hpp  compose_graph_runtime_support.hpp  compose_graph_test_utils.hpp  manual_scheduler.hpp  non_nothrow_value.hpp  sender_capture.hpp  sender_env.hpp  static_thread_scheduler.hpp  test_thread_wait.hpp  thread_support.hpp
tests/helper/mock/: agent_mock.hpp  chat_model_mock.hpp  document_mock.hpp  embedding_mock.hpp  indexer_mock.hpp  retriever_mock.hpp  stream_mock.hpp
tests/helper/mock/detail/: scripted_result_queue.hpp
(+877 files in other folders)
